--- a/README
+++ b/README
@@ -12,7 +12,7 @@ DESCRIPTION
   environment in TIS-620 by easy installation and easy usage.
 
   - Character oriented regular expression
-  - Character oriented run-time routines
+  - Character oriented runtime routines
   - Character oriented subroutines
       and
   - Byte oriented CORE::* functions
@@ -45,6 +45,7 @@ INSTALLATION
 
 SUBROUTINES
 
+  TIS620::eval(charstring)
   TIS620::length(charstring)
   TIS620::substr(charstring, charpos, charlen)
   and more...
